[project]
name = "pm-os-env"
version = "1.0.0"
description = "PM-OS OpenEnv Environment"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"